feat: Enhance UI with animations and visual flair
Introduce framer-motion and three.js for dynamic UI elements. Refactor Hero and Navbar components to incorporate animations and a more sophisticated visual theme. Update global styles to include a subtle noise overlay and adjust scrollbar appearance for a cleaner look. Add new icons to the Navbar for social links.

--- a/index.html
+++ b/index.html
@@ -12,60 +12,86 @@
     <style>
         body {
             font-family: 'Inter', sans-serif;
-            background-color: #050505;
+            background-color: #020202;
             color: #ffffff;
             overflow-x: hidden;
+            margin: 0;
         }
         .mono {
             font-family: 'Fira Code', monospace;
         }
         ::-webkit-scrollbar {
-            width: 6px;
+            width: 4px;
         }
         ::-webkit-scrollbar-track {
-            background: #050505;
+            background: #020202;
         }
         ::-webkit-scrollbar-thumb {
-            background: #333;
+            background: #1a1a1a;
             border-radius: 10px;
         }
         ::-webkit-scrollbar-thumb:hover {
             background: #3B82F6;
         }
-        @keyframes scanline {
-            0% { transform: translateY(-100%); }
-            100% { transform: translateY(100%); }
-        }
-        .scanline {
-            position: absolute;
+        .noise-overlay {
+            position: fixed;
             top: 0;
             left: 0;
             width: 100%;
-            height: 10px;
-            background: linear-gradient(to bottom, transparent, rgba(59, 130, 246, 0.1), transparent);
-            animation: scanline 8s linear infinite;
+            height: 100%;
+            background: url('https://grainy-gradients.vercel.app/noise.svg');
+            opacity: 0.03;
             pointer-events: none;
+            z-index: 9999;
         }
-        .grid-bg {
-            background-image: radial-gradient(circle at 2px 2px, rgba(255, 255, 255, 0.05) 1px, transparent 0);
-            background-size: 40px 40px;
+        .gradient-mesh {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: 
+                radial-gradient(circle at 0% 0%, rgba(59, 130, 246, 0.05) 0%, transparent 50%),
+                radial-gradient(circle at 100% 100%, rgba(245, 158, 11, 0.05) 0%, transparent 50%);
+            pointer-events: none;
+            z-index: -1;
+        }
+        @keyframes glitch {
+          0% { transform: translate(0); }
+          20% { transform: translate(-2px, 2px); }
+          40% { transform: translate(-2px, -2px); }
+          60% { transform: translate(2px, 2px); }
+          80% { transform: translate(2px, -2px); }
+          100% { transform: translate(0); }
+        }
+        .glitch-text:hover {
+          animation: glitch 0.3s cubic-bezier(.25,.46,.45,.94) both infinite;
+        }
+        canvas {
+            display: block;
         }
     </style>
 <script type="importmap">
 {
   "imports": {
-    "react/": "https://esm.sh/react@^19.2.4/",
-    "react": "https://esm.sh/react@^19.2.4",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
+    "react": "https://esm.sh/react@19.0.0",
+    "react-dom": "https://esm.sh/react-dom@19.0.0",
+    "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
     "@google/genai": "https://esm.sh/@google/genai@^1.41.0",
     "lucide-react": "https://esm.sh/lucide-react@^0.571.0",
     "recharts": "https://esm.sh/recharts@^3.7.0",
-    "react-router-dom": "https://esm.sh/react-router-dom@^7.13.0"
+    "react-router-dom": "https://esm.sh/react-router-dom@^7.13.0",
+    "framer-motion": "https://esm.sh/framer-motion@^11.11.11",
+    "three": "https://esm.sh/three@0.170.0",
+    "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
+    "react/": "https://esm.sh/react@^19.2.4/"
   }
 }
 </script>
 </head>
 <body>
+    <div class="noise-overlay"></div>
+    <div class="gradient-mesh"></div>
     <div id="root"></div>
 </body>
 </html>
