--- a/index.html
+++ b/index.html
@@ -44,24 +44,27 @@
             pointer-events: none;
             z-index: 9999;
         }
-        .gradient-mesh {
-            position: fixed;
-            top: 0;
-            left: 0;
+        .scanline {
             width: 100%;
-            height: 100%;
-            background: 
-                radial-gradient(circle at 0% 0%, rgba(59, 130, 246, 0.05) 0%, transparent 50%),
-                radial-gradient(circle at 100% 100%, rgba(245, 158, 11, 0.05) 0%, transparent 50%);
+            height: 100px;
+            z-index: 50;
+            background: linear-gradient(0deg, rgba(0, 0, 0, 0) 0%, rgba(59, 130, 246, 0.05) 50%, rgba(0, 0, 0, 0) 100%);
+            opacity: 0.1;
+            position: fixed;
+            bottom: 100%;
             pointer-events: none;
-            z-index: -1;
+            animation: scanline 8s linear infinite;
+        }
+        @keyframes scanline {
+            0% { bottom: 100%; }
+            100% { bottom: -100px; }
         }
         @keyframes glitch {
           0% { transform: translate(0); }
-          20% { transform: translate(-2px, 2px); }
-          40% { transform: translate(-2px, -2px); }
-          60% { transform: translate(2px, 2px); }
-          80% { transform: translate(2px, -2px); }
+          20% { transform: translate(-1px, 1px); }
+          40% { transform: translate(-1px, -1px); }
+          60% { transform: translate(1px, 1px); }
+          80% { transform: translate(1px, -1px); }
           100% { transform: translate(0); }
         }
         .glitch-text:hover {
@@ -69,6 +72,17 @@
         }
         canvas {
             display: block;
+            outline: none;
+        }
+        @keyframes promptGlitch {
+          0% { transform: translate(0, 0); opacity: 1; color: #EF4444; }
+          25% { transform: translate(-2px, 2px); }
+          50% { transform: translate(2px, -2px); opacity: 0.5; color: #F59E0B; }
+          75% { transform: translate(-2px, 2px); }
+          100% { transform: translate(0, 0); opacity: 1; color: #3B82F6; }
+        }
+        .prompt-glitch-active {
+          animation: promptGlitch 150ms cubic-bezier(.25,.46,.45,.94) 1;
         }
     </style>
 <script type="importmap">
@@ -77,21 +91,21 @@
     "react": "https://esm.sh/react@19.0.0",
     "react-dom": "https://esm.sh/react-dom@19.0.0",
     "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
-    "@google/genai": "https://esm.sh/@google/genai@^1.41.0",
-    "lucide-react": "https://esm.sh/lucide-react@^0.571.0",
-    "recharts": "https://esm.sh/recharts@^3.7.0",
-    "react-router-dom": "https://esm.sh/react-router-dom@^7.13.0",
-    "framer-motion": "https://esm.sh/framer-motion@^11.11.11",
+    "@google/genai": "https://esm.sh/@google/genai@1.41.0",
+    "lucide-react": "https://esm.sh/lucide-react@0.571.0?external=react",
+    "recharts": "https://esm.sh/recharts@3.7.0?external=react,react-dom",
+    "react-router-dom": "https://esm.sh/react-router-dom@7.13.0?external=react,react-dom",
+    "framer-motion": "https://esm.sh/framer-motion@11.11.11?external=react,react-dom",
     "three": "https://esm.sh/three@0.170.0",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
-    "react/": "https://esm.sh/react@^19.2.4/"
+    "react/": "https://esm.sh/react@^19.2.4/",
+    "react-dom/": "https://esm.sh/react-dom@^19.2.4/"
   }
 }
 </script>
 </head>
 <body>
     <div class="noise-overlay"></div>
-    <div class="gradient-mesh"></div>
+    <div class="scanline"></div>
     <div id="root"></div>
 </body>
 </html>
